src/App.css
/* Font Declaration */

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}
.sansita-swashed {
  font-family: "Sansita Swashed", system-ui;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
}

.caudex-regular {
  font-family: "Caudex", serif;
  font-weight: 400;
  font-style: normal;
}

.caudex-bold {
  font-family: "Caudex", serif;
  font-weight: 700;
  font-style: normal;
}

.adlam-display-regular {
  font-family: "ADLaM Display", system-ui;
  font-weight: 400;
  font-style: normal;
}

#main-content > section {
  @apply w-full flex flex-grow justify-center;
}

/* Root */
#root {
  max-width: 1920px;
  margin: 0 auto;
  text-align: center;
}

html {
  scroll-behaviour: smooth;
}

h1 {
  font-size: clamp(2em, 14vw + 1rem, 20em);
  @apply caudex-bold font-extrabold tracking-tight leading-relaxed;
}


/* Hero styles */
.hero-header-text {
  font-size: clamp(1.5rem, 12vw + 1rem, 12rem);
  font-family: "League Spartan", sans-serif;
  text-align: left;
  font-syle: normal;
  font-weight: 600;
}

.league-spartan-extrabold {
  font-family: "League Spartan", sans-serif;
  font-optical-sizing: auto;
  font-weight: 900;
  font-style: normal;
}

.w-clamp-profile {
  width: clamp(50vw + 1rem, 50vw + 1rem, 50vw);
}



/* Header Styles */
.resume-header {
  @apply sticky mx-auto z-50 top-4 max-lg:w-full max-lg:gap-6 gap-4 px-6 py-2 flex flex-row justify-center lg:justify-between items-center max-lg:flex-wrap
}
.header-items-wrapper {
  @apply py-2 px-6 border-[calc(1px)] border-white rounded-3xl bg-primary text-center tracking-wider font-semibold font-sans box-border;
}
.header-items-wrapper:hover{
  @apply bg-white text-primary cursor-pointer transition-colors ease-in
}

.text-secondary {
  @apply text-[color:#A5A5A5];
}

.text-primary {
  @apply text-[color:#202020]
}
.bg-primary {
  @apply bg-[color:#202020];
}

.bg-secondary {
  @apply bg-[color:#A5A5A5];
}

/* 
  Note Styles 
*/
.quote-text {
  @apply px-12 font-serif text-3xl lg:text-6xl text-wrap tracking-wider lg:leading-[6rem] text-white italic
}

/*
  Skills Section Styles
*/
#skills-heading {
  font-size: clamp(2em, 14vw + 1rem, 20em);
  @apply lg:absolute flex text-center caudex-bold text-white;
}

.tw-skills-container {
  @apply flex flex-wrap max-w-[80%] lg:max-w-[50%] justify-center items-center overflow-hidden;
}

#skills-container > span {
  @apply box-content overflow-hidden border-[1px] border-white rounded-full text-white text-[2vw] px-6 py-3 caudex-regular;
}


#education-container > * > span {
  @apply h-full flex flex-1;
}

#work-education-container span {
  @apply font-mono h-full flex items-center justify-start text-slate-100;
}

/* Work Experience & Education History Styles */



/* Projects Section Style */
.projectHeading {
  font-size: clamp(2em, 14vw + 1rem, 20em);
}

.quote-color {
  background: linear-gradient(90deg, #3ce7de, #91FF82);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}

/* Contact Form Styles */
#contact-form {
  @apply w-full
}
#contact-form * > input {
  @apply bg-transparent border-2 border-gray-500/40 w-full text-primary outline-none rounded-md px-3 py-2 focus:border-green-600;
}
#contact-form * > label {
  @apply block text-primary font-bold poppins-regular;
}

#contact-wrapper h1 {
  font-size: clamp(2em, 8.5vw + 1rem, 20em);
}

#contact-wrapper h1 > span {
  @apply text-green-600 font-extrabold;
}

/* Animations */
.hero-anim{
  background: linear-gradient(90deg, #aaee52, #3ce7de, #676767, #A5A5A5);
  background-size: 400% 400%;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: gradient 5s linear infinite;
}

.header-bg-color-anim{
  background-color: black;
}

@keyframes gradient {
  0%, 100% {
    background-position: 100% 50%;
  }
  50% {
    background-position: 0% 50%;
  }
}

/* Custom styles for card flip effect */
.flip-card {
  perspective: 1500px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: transform 0.8s ease;
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 10px;
  overflow: hidden;
}

.flip-card-back {
  transform: rotateY(180deg);
  background-color: #1a202c;
  color: white;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 70;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  transform: scale(1.1);
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease;
}

